Basic Knot.x tuning description.